--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 export PATH="$HOME/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin"
+export WORKSPACE="$HOME/github/ubuntu"
+
